# mcp-geocoder-rosetta

./: .gitignore  LICENSE  README.md  debug_mcp.sh  run_geocoder.py  test_direct.py  test_server.py
mcp-client/: README.md  client.py  run_client.py  setup_env.py
python-googlemaps/: README.md  geocoder.py  pyproject.toml  requirements.txt
python-urllib/: README.md  geocoder.py  pyproject.toml
typescript-googlemaps/: README.md  geocoder.ts  package-lock.json  package.json
