[project]
name = "mcp-geocoder-googlemaps"
version = "0.1.0"
description = "An MCP geocoder implementation using the Google Maps Python SDK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "googlemaps>=4.10.0",
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
