[project]
name = "mcp-geocoder-urllib"
version = "0.1.0"
description = "An MCP geocoder implementation using Python's urllib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
